--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -19,9 +19,9 @@ body {
     )
     rgb(var(--background-start-rgb));
 } */
-
+/* 
 @layer utilities {
   .text-balance {
     text-wrap: balance;
   }
-}
+} */
